--- a/404.html
+++ b/404.html
@@ -5,10 +5,9 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Simon Tokumine</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/tokumine.css">
-    <script src="js/canvas/vector2.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/css/tokumine.css">
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
